# compi-builder

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/confirm-release/: SKILL.md
.claude/skills/pre-release-checklist/: SKILL.md
.claude/skills/refactor-while-testing/: SKILL.md
.claude/skills/release-changelog/: SKILL.md
.cursor/plans/: retroactive_social_metrics_backfill_08b46fd1.plan.md
.cursor/rules/: download-system.mdc  url-formatting.mdc
.github/workflows/: release.yml  test.yml
docs/: creator-suggest-hubspot-n8n-setup.md  download-system-requirements.md  flag-potential-duplicate-pairs.md  minimiki-knowledge.md
docs/external-clips-url-rules/: URL Compliance Test Cases.xlsx  URL Format Rules — External Clips.md  n8n-url-compliance-check.js
docs/hs-properties/: hubspot-properties-export-creators-2026-04-01.csv  hubspot-properties-export-external-clips-2026-04-01.csv  hubspot-properties-export-video-projects-2026-04-01-1.csv
scripts/: audit_used_in_video_tag.py  download-sidecars.sh  release.sh  report_empty_tag_with_used_in.py
src/: App.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cascade.rs  download_log.rs  helpers.rs  lib.rs  main.rs  minimiki.rs  operativo.rs  resolver.rs  socialfetch.rs  socialkit.rs  ytdlp_repair.rs
src/components/: ArrangeTab.tsx  AutofillBucketCard.tsx  AutofillFilterRow.tsx  AutofillPreview.tsx  AutofillTab.tsx  ChangelogDialog.tsx  ClipCard.tsx  ClipPreview.tsx  ClipTagEditorRow.tsx  CreatorPicker.tsx  CreatorSuggestionPanel.tsx  DataIntegrityPage.tsx  DownloadsLogDialog.tsx  DuplicatePairDetail.tsx  DuplicatesPage.tsx  FeedbackDialog.tsx  GeneralSearchTab.tsx  LicenseTypePicker.tsx  MergeHistoryDetail.tsx  MissingConfigNudge.test.tsx  MissingConfigNudge.tsx  MissingOptionalSettingsDialog.tsx  ProjectTab.tsx  RequiredHubSpotTokenDialog.tsx  SearchTab.tsx  SettingsDialog.tsx  SettingsPage.tsx  Sidebar.tsx  TagClipsTab.tsx  TagPicker.tsx  TagSuggestionPanel.tsx  duplicate-pair-view-primitives.tsx
src/lib/: autofill.ts  clip-code.test.ts  clip-code.ts  clip-sessions.ts  clipFilters.ts  creator-export.ts  creator-resolver.ts  creator-url-canonicalize.test.ts  creator-url-canonicalize.ts  getPlatform.ts  hubspot-urls.ts  hubspot.ts  owner-email.ts  resolve-error-message.test.ts  resolve-error-message.ts  supabase.ts  tags.test.ts  tags.ts  thumb-cache-mem.ts  thumb-cache.test.ts  thumb-cache.ts  url-compliance.test.ts  url-compliance.ts
src/test/: ArrangeTab.cinema.test.tsx  FinishVideo.test.tsx  editingNotes.test.ts  setup.ts
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260303120000_create_feedback_system.sql  20260507180000_create_minimiki_chat.sql  20260511180000_create_hs_exports.sql  20260512100000_create_duplicate_pair_resolutions.sql  20260513120000_create_duplicate_merge_snapshots.sql  20260513160000_create_hs_excluded_owners.sql  20260514100000_create_creator_url_autofix_events.sql  20260516081100_create_creator_merge_files_bucket.sql  20260519090000_flag_potential_duplicate_pairs.sql
(+46 files in other folders)
