[package]
name = "compi-builder"
version = "2.0.0"
description = "Compi Builder - desktop app for managing video clips and projects"
authors = ["QforMedia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "compi_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
urlencoding = "2"
zip = "2"
mp4 = "0.14"
rand = "0.8"
once_cell = "1"
regex = "1"
base64 = "0.22"
which = "7"
tempfile = "3"
lru = "0.12"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
strsim = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }

# `xcap` is only used by the MiniMiki screenshot path. CompiFlow ships
# macOS DMG + Windows MSI only — but the release CI runs `cargo test --lib`
# on Ubuntu to catch issues. xcap's Linux backend pulls in libpipewire +
# libgbm + libdrm + libxkbcommon dev headers, which we'd otherwise need
# to install on the runner just to compile a code path that never runs
# on Linux. Limiting the dep to non-Linux keeps the Linux test job slim
# and avoids the system-dep treadmill. See `capture_window_png` in
# `src/minimiki.rs` for the matching cfg-gated stub on Linux.
[target.'cfg(not(target_os = "linux"))'.dependencies]
xcap = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["process", "io-util", "macros", "rt", "time"] }
